# ndlocr-lite-immich-adapter

./: .dockerignore  .env.example  .gitignore  CHANGELOG-JP.md  CHANGELOG.md  Dockerfile  NOTICE.md  README-JP.md  README.md  THIRD_PARTY_LICENSES.md  docker-compose.example.yml  pyproject.toml
.github/scripts/: extract_changelog.py
.github/workflows/: docker.yml  lint.yml  release-notes.yml
src/ndlocr_lite_adapter/: app.py  bootstrap.py  config.py  main.py  runner.py  schemas.py  service.py  transform.py
tests/: test_api.py  test_bootstrap.py  test_runner.py  test_service.py  test_transform.py
